; ModuleID = '/home/carl/AnghaBench/linux/drivers/leds/trigger/extr_ledtrig-transient.c_transient_trig_activate.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/leds/trigger/extr_ledtrig-transient.c_transient_trig_activate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.led_classdev = type { i32 }
%struct.transient_trig_data = type { i32, %struct.led_classdev* }

@GFP_KERNEL = common dso_local global i32 0, align 4
@ENOMEM = common dso_local global i32 0, align 4
@transient_timer_function = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.led_classdev*)* @transient_trig_activate to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @transient_trig_activate(%struct.led_classdev* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.led_classdev*, align 8
  %4 = alloca %struct.transient_trig_data*, align 8
  store %struct.led_classdev* %0, %struct.led_classdev** %3, align 8
  %5 = load i32, i32* @GFP_KERNEL, align 4
  %6 = call %struct.transient_trig_data* @kzalloc(i32 16, i32 %5)
  store %struct.transient_trig_data* %6, %struct.transient_trig_data** %4, align 8
  %7 = load %struct.transient_trig_data*, %struct.transient_trig_data** %4, align 8
  %8 = icmp ne %struct.transient_trig_data* %7, null
  br i1 %8, label %12, label %9

9:                                                ; preds = %1
  %10 = load i32, i32* @ENOMEM, align 4
  %11 = sub nsw i32 0, %10
  store i32 %11, i32* %2, align 4
  br label %23

12:                                               ; preds = %1
  %13 = load %struct.led_classdev*, %struct.led_classdev** %3, align 8
  %14 = load %struct.transient_trig_data*, %struct.transient_trig_data** %4, align 8
  %15 = call i32 @led_set_trigger_data(%struct.led_classdev* %13, %struct.transient_trig_data* %14)
  %16 = load %struct.led_classdev*, %struct.led_classdev** %3, align 8
  %17 = load %struct.transient_trig_data*, %struct.transient_trig_data** %4, align 8
  %18 = getelementptr inbounds %struct.transient_trig_data, %struct.transient_trig_data* %17, i32 0, i32 1
  store %struct.led_classdev* %16, %struct.led_classdev** %18, align 8
  %19 = load %struct.transient_trig_data*, %struct.transient_trig_data** %4, align 8
  %20 = getelementptr inbounds %struct.transient_trig_data, %struct.transient_trig_data* %19, i32 0, i32 0
  %21 = load i32, i32* @transient_timer_function, align 4
  %22 = call i32 @timer_setup(i32* %20, i32 %21, i32 0)
  store i32 0, i32* %2, align 4
  br label %23

23:                                               ; preds = %12, %9
  %24 = load i32, i32* %2, align 4
  ret i32 %24
}

declare dso_local %struct.transient_trig_data* @kzalloc(i32, i32) #1

declare dso_local i32 @led_set_trigger_data(%struct.led_classdev*, %struct.transient_trig_data*) #1

declare dso_local i32 @timer_setup(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
